--- a/index.html
+++ b/index.html
@@ -4,38 +4,79 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="stylesheet.css">
     <title>Challenge - DOM</title>
   </head>
   <body>
+
     <div id="app">
-      <!-- TODO: Buatlah sebuah header dengan id todo-title -->
-      <!-- TODO: Buatlah sebuah subtitle dengan id todo-subtitle -->
-
-      <!-- Section: input -->
-      <!-- TODO: Buatlah sebuah input bertipe text dengan id todo-input -->
-      <!-- TODO: Buatlah sebuah button dengan id todo-submit -->
-
-      <!-- Section output -->
-      <!-- TODO: Buatlah sebuah <ul> dengan id todo-output -->
+      <div class="date">
+        <h2 id="date" ></h2>
+        <p id="month" class="M"></p>
+        <p id="year" class="Y"></pcl>
+      </div>
+      <div class="day">
+        <h2 id="day"></h2>
+      </div>
+      <h1 id="todo-title"></h1>
+      <h3 id="todo-subtitle"></h3>
+      <input type="text" id="todo-input" placeholder="Input your To Do List">
+      <button type="submit" id="todo-submit" onclick="fnClickHandler">+</button>
+      <ul id="todo-output"></ul>
     </div>
 
-    <!-- ! Untuk tantangan ini, script jangan diubah ke external js yah ! -->
     <script>
-      // TODO: Deklarasi variable sesuai dengan kebutuhan di sini
-      let button;
-      let input;
-      let output;
 
-      // TODO: Buatlah sebuah fungsi dengan nama fnClickHandler
-      // Fungsi yang digunakan untuk menambahkan tulisan
-      // Jangan ubah cara deklarasi fungsinya, cukup isi saja
-      function fnClickHandler(toDoItem) {}
+      const months = ["JAN", "FEB", "MAR", "APR", "MAY", "JUN", "JUL", "AUG", "SEP", "OCT", "NOV", "DEC"];
+      const d = new Date();
+      let month = months[d.getMonth()];
+      let placeMonth = document.getElementById("month");
+      placeMonth.innerHTML = month;
 
-      // TODO: register event onclick / addEventListener untuk button
-      // akan menjalankan fungsi fnClickHandler
-      
-      // TODO: register event onkeypress / addEventListener untuk input
-      // sehingga saat di input ditekan enter akan menjalankan fungsi fnClickHandler juga
+      const days = ["SUNDAY", "MONDAY", "TUESDAY", "WEDNESDAY", "THURSDAY", "FRIDAY", "SATURDAY"];
+      let day = days[d.getDay()];
+      let placeDay = document.getElementById("day");
+      placeDay.innerHTML = day;
+
+      let date = d.getDate();
+      let placeDate = document.getElementById("date");
+      placeDate.innerHTML = date;
+
+      let year = d.getFullYear();
+      let placeYear = document.getElementById("year");
+      placeYear.innerHTML = year;
+
+      let button = document.getElementById("todo-submit");
+      let input = document.getElementById("todo-input");
+      let output = document.getElementById("todo-output");
+
+      function fnClickHandler(toDoItem) {
+        const addLi = document.createElement("li");
+        const value = input.value;
+        addLi.innerHTML = value + "<button onclick='toggleClass()' id='check' class='checklist'></button>";
+        output.appendChild(addLi);
+
+      }
+
+      button.addEventListener('click', () => {
+        fnClickHandler();
+        input.value = "";
+      });
+
+      input.addEventListener("keypress", function(event) {
+        if (event.key === "Enter") {
+          event.preventDefault();
+          button.click();
+        }
+      });
+
+      function toggleClass() {
+        const element = document.getElementById("check");
+        const element2 = document.querySelector("li");
+        element.classList.toggle("checkActive");
+        element2.classList.toggle("checkActive2");
+      }
+
     </script>
   </body>
 </html>
